# Enigma

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Config/: setup1  setup2  setup3
Machine/: Enigma.cpp  Enigma.hpp
Machine/Components/: Keyboard.cpp  Keyboard.hpp  Lampboard.cpp  Lampboard.hpp  Plugboard.cpp  Plugboard.hpp  Reflector.cpp  Reflector.hpp  Rotor.cpp  Rotor.hpp
Program/Collector/: Input.cpp  Input.hpp
Program/Constants/: Mode.hpp
Program/Tuples/: Action.cpp  Action.hpp  Setup.cpp  Setup.hpp
